add transfer seq

--- a/tools/shaping_trans_seqs.ipynb
+++ b/tools/shaping_trans_seqs.ipynb
@@ -37,6 +37,7 @@
     "\n",
     "NUM_KEYS = 4\n",
     "NUM_FOOD = 4\n",
+    "ALL_VF_IMAGES_SET = 4\n",
     "OUTPUT_COL_ORDER = [\n",
     "    \"stim\",\n",
     "    \"correct_key\",\n",
@@ -271,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "2005c971",
    "metadata": {},
    "outputs": [],
@@ -367,13 +368,62 @@
     "        stim_food_mapping,\n",
     "    )\n",
     "\n",
+    "def generate_top_transfer_block(\n",
+    "    trans_shop_mapping,     \n",
+    "    last_num_stim_iter,\n",
+    "    num_villagers,\n",
+    "    previous_img_set,\n",
+    "    num_food=NUM_FOOD,\n",
+    "):\n",
+    "    stim_food_mapping = generate_kv_mapping(num_villagers, num_food)\n",
+    "\n",
+    "    tranfer_block = generate_non_shaping_block(\n",
+    "        NUM_KEYS,\n",
+    "        num_food,\n",
+    "        last_num_stim_iter,\n",
+    "        trans_shop_mapping,\n",
+    "        stim_food_mapping,\n",
+    "    )\n",
+    "    choices = np.setdiff1d(np.arange(0, ALL_VF_IMAGES_SET), [previous_img_set])\n",
+    "    new_img_set = np.random.choice(choices)\n",
+    "    tranfer_block[\"img_folder\"] = new_img_set + 1\n",
+    "    tranfer_block['set_size'] = num_villagers\n",
+    "    tranfer_block['block'] = 1\n",
+    "    return tranfer_block[OUTPUT_COL_ORDER]\n",
+    "\n",
+    "def generate_test_block(NUM_TEST_ITER, img_set, set_size, trans_shop_mapping, stim_food_mapping):\n",
+    "    testing_data = generate_non_shaping_block(\n",
+    "        NUM_KEYS,\n",
+    "        NUM_FOOD,\n",
+    "        NUM_TEST_ITER,\n",
+    "        trans_shop_mapping,\n",
+    "        stim_food_mapping,\n",
+    "    )\n",
+    "    testing_data[\"block\"] = 1\n",
+    "    testing_data[\"img_folder\"] = img_set + 1\n",
+    "    testing_data[\"set_size\"] = set_size\n",
+    "    testing_data = testing_data[OUTPUT_COL_ORDER]    \n",
+    "    return testing_data\n",
+    "\n",
+    "def getnerate_self_paced_block(trans_shop_mapping, stim_food_mapping, set_size, img_set):\n",
+    "    self_paced_seq_data = []\n",
+    "    for t, mapping in zip([\"trans\", \"food\"], [trans_shop_mapping, stim_food_mapping]):\n",
+    "        seq_data = self_paced_seq(mapping)\n",
+    "        seq_data[\"type\"] = t\n",
+    "        self_paced_seq_data.append(seq_data)\n",
+    "\n",
+    "    self_paced_seq_data = pd.concat(self_paced_seq_data)\n",
+    "    self_paced_seq_data[\"set_size\"] = set_size\n",
+    "    self_paced_seq_data[\"img_folder\"] = img_set + 1    \n",
+    "    return self_paced_seq_data\n",
+    "\n",
     "def self_paced_seq(sr_mapping):\n",
     "    return pd.DataFrame({'stim': np.arange(len(sr_mapping)), 'correct_key': sr_mapping})    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "2ce3d7e0",
    "metadata": {},
    "outputs": [],
@@ -383,43 +433,42 @@
     "SZ_TO_ITER = {4: 12, 6: 8}\n",
     "NUM_TEST_ITER = 4\n",
     "\n",
-    "img_set = 0\n",
     "set_size = 6\n",
     "for seq_idx in range(2):\n",
+    "    img_set = np.random.choice(np.arange(0, ALL_VF_IMAGES_SET))\n",
     "    shaping_blocks, nonshaping_blocks, trans_shop_mapping, stim_food_mapping = (\n",
-    "        generate_learning_round(LAST_BLOCK_ITER, set_size, img_set, SZ_TO_ITER, 4, NUM_FOOD)\n",
+    "        generate_learning_round(\n",
+    "            LAST_BLOCK_ITER, set_size, img_set, SZ_TO_ITER, 4, NUM_FOOD\n",
+    "        )\n",
     "    )\n",
-    "    testing_data = generate_non_shaping_block(\n",
-    "        NUM_KEYS,\n",
-    "        NUM_FOOD,\n",
-    "        NUM_TEST_ITER,\n",
+    "    tranfer_block = generate_top_transfer_block(\n",
     "        trans_shop_mapping,\n",
-    "        stim_food_mapping,\n",
+    "        LAST_BLOCK_ITER,\n",
+    "        set_size,\n",
+    "        img_set,\n",
+    "        NUM_FOOD,\n",
     "    )\n",
-    "    testing_data[\"block\"] = 1\n",
-    "    testing_data[\"img_folder\"] = img_set\n",
-    "    testing_data[\"set_size\"] = set_size\n",
-    "    testing_data = testing_data[OUTPUT_COL_ORDER]\n",
+    "    testing_data = generate_test_block(\n",
+    "       NUM_TEST_ITER, img_set, set_size, trans_shop_mapping, stim_food_mapping\n",
+    "    )\n",
     "\n",
-    "    self_paced_seq_data = []\n",
-    "    for t, mapping in zip(['trans', 'food'], [trans_shop_mapping, stim_food_mapping]):\n",
-    "        seq_data = self_paced_seq(mapping)\n",
-    "        seq_data['type'] = t\n",
-    "        self_paced_seq_data.append(seq_data)\n",
+    "    self_paced_seq_data = getnerate_self_paced_block(trans_shop_mapping, stim_food_mapping, set_size, img_set)\n",
     "\n",
-    "    self_paced_seq_data = pd.concat(self_paced_seq_data)\n",
-    "    self_paced_seq_data['set_size'] = set_size\n",
-    "    self_paced_seq_data['img_folder'] = img_set\n",
     "    for name, data in zip(\n",
     "        [\"shaping\", \"nonshaping\"], [shaping_blocks, nonshaping_blocks]\n",
     "    ):\n",
     "        concated_data = data\n",
     "        concated_data[\"block\"] = concated_data[\"block\"] + 1\n",
     "        concated_data = concated_data[OUTPUT_COL_ORDER]\n",
-    "        concated_data.to_csv(f\"{seq_folder}/{name}_trans{seq_idx}_learning.csv\", index=False)\n",
-    "\n",
+    "        concated_data.to_csv(\n",
+    "            f\"{seq_folder}/{name}_trans{seq_idx}_learning.csv\", index=False\n",
+    "        )\n",
+    "    \n",
+    "    tranfer_block.to_csv(f\"{seq_folder}/trans{seq_idx}_transfer.csv\", index=False)\n",
     "    testing_data.to_csv(f\"{seq_folder}/trans{seq_idx}_testing.csv\", index=False)\n",
-    "    self_paced_seq_data.to_csv(f\"{seq_folder}/trans{seq_idx}_self_paced_testing.csv\", index=False)"
+    "    self_paced_seq_data.to_csv(\n",
+    "        f\"{seq_folder}/trans{seq_idx}_self_paced_testing.csv\", index=False\n",
+    "    )"
    ]
   }
  ],
