add trans folder

--- a/tools/shaping_trans_seqs.ipynb
+++ b/tools/shaping_trans_seqs.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "8790c35a",
    "metadata": {},
    "outputs": [],
@@ -38,11 +38,13 @@
     "NUM_KEYS = 4\n",
     "NUM_FOOD = 4\n",
     "ALL_VF_IMAGES_SET = 4\n",
+    "TRANS_FOLDER = 1\n",
     "OUTPUT_COL_ORDER = [\n",
     "    \"stim\",\n",
     "    \"correct_key\",\n",
     "    \"block\",\n",
     "    \"img_folder\",\n",
+    "    \"trans_folder\",\n",
     "    \"key0_trans\",\n",
     "    \"key1_trans\",\n",
     "    \"key2_trans\",\n",
@@ -272,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "2005c971",
    "metadata": {},
    "outputs": [],
@@ -387,6 +389,7 @@
     "    choices = np.setdiff1d(np.arange(0, ALL_VF_IMAGES_SET), [previous_img_set])\n",
     "    new_img_set = np.random.choice(choices)\n",
     "    tranfer_block[\"img_folder\"] = new_img_set + 1\n",
+    "    tranfer_block[\"trans_folder\"] = TRANS_FOLDER\n",
     "    tranfer_block['set_size'] = num_villagers\n",
     "    tranfer_block['block'] = 1\n",
     "    return tranfer_block[OUTPUT_COL_ORDER]\n",
@@ -401,6 +404,7 @@
     "    )\n",
     "    testing_data[\"block\"] = 1\n",
     "    testing_data[\"img_folder\"] = img_set + 1\n",
+    "    testing_data[\"trans_folder\"] = TRANS_FOLDER\n",
     "    testing_data[\"set_size\"] = set_size\n",
     "    testing_data = testing_data[OUTPUT_COL_ORDER]    \n",
     "    return testing_data\n",
@@ -415,6 +419,7 @@
     "    self_paced_seq_data = pd.concat(self_paced_seq_data)\n",
     "    self_paced_seq_data[\"set_size\"] = set_size\n",
     "    self_paced_seq_data[\"img_folder\"] = img_set + 1    \n",
+    "    self_paced_seq_data[\"trans_folder\"] = TRANS_FOLDER\n",
     "    return self_paced_seq_data\n",
     "\n",
     "def self_paced_seq(sr_mapping):\n",
@@ -423,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "2ce3d7e0",
    "metadata": {},
    "outputs": [],
@@ -459,6 +464,7 @@
     "    ):\n",
     "        concated_data = data\n",
     "        concated_data[\"block\"] = concated_data[\"block\"] + 1\n",
+    "        concated_data[\"trans_folder\"] = TRANS_FOLDER\n",
     "        concated_data = concated_data[OUTPUT_COL_ORDER]\n",
     "        concated_data.to_csv(\n",
     "            f\"{seq_folder}/{name}_trans{seq_idx}_learning.csv\", index=False\n",
