--- a/tools/shaping_trans_seqs.ipynb
+++ b/tools/shaping_trans_seqs.ipynb
@@ -2,19 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "id": "a703eb80",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -37,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "id": "8790c35a",
    "metadata": {},
    "outputs": [],
@@ -72,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "id": "00254e8b",
    "metadata": {},
    "outputs": [
@@ -82,7 +73,7 @@
        "3"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -105,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "id": "4fba8ff0",
    "metadata": {},
    "outputs": [],
@@ -283,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "id": "2005c971",
    "metadata": {},
    "outputs": [],
@@ -420,9 +411,9 @@
     "\n",
     "def getnerate_self_paced_block(trans_shop_mapping, stim_food_mapping, set_size, img_set):\n",
     "    self_paced_seq_data = []\n",
-    "    for t, mapping in zip([\"trans\", \"food\"], [trans_shop_mapping, stim_food_mapping]):\n",
+    "    for t, mapping in zip([0, 1], [trans_shop_mapping, stim_food_mapping]):\n",
     "        seq_data = self_paced_seq(mapping)\n",
-    "        seq_data[\"type\"] = t\n",
+    "        seq_data[\"type\"] = t # trans=0, food=1\n",
     "        self_paced_seq_data.append(seq_data)\n",
     "\n",
     "    self_paced_seq_data = pd.concat(self_paced_seq_data)\n",
@@ -437,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "id": "2ce3d7e0",
    "metadata": {},
    "outputs": [],
