--- a/tools/shaping_trans_seqs.ipynb
+++ b/tools/shaping_trans_seqs.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "8790c35a",
    "metadata": {},
    "outputs": [],
@@ -58,6 +58,15 @@
     "    \"trans2_shop\",\n",
     "    \"trans3_shop\",\n",
     "    \"set_size\",\n",
+    "]\n",
+    "\n",
+    "SELF_PACED_OUTPUT_COL_ORDER = [\n",
+    "    \"stim\",\n",
+    "    \"correct_key\",\n",
+    "    \"img_folder\",\n",
+    "    \"set_size\",\n",
+    "    \"type\",\n",
+    "    \"trans_folder\",\n",
     "]"
    ]
   },
@@ -274,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "2005c971",
    "metadata": {},
    "outputs": [],
@@ -420,7 +429,7 @@
     "    self_paced_seq_data[\"set_size\"] = set_size\n",
     "    self_paced_seq_data[\"img_folder\"] = img_set + 1    \n",
     "    self_paced_seq_data[\"trans_folder\"] = TRANS_FOLDER\n",
-    "    return self_paced_seq_data\n",
+    "    return self_paced_seq_data[SELF_PACED_OUTPUT_COL_ORDER]\n",
     "\n",
     "def self_paced_seq(sr_mapping):\n",
     "    return pd.DataFrame({'stim': np.arange(len(sr_mapping)), 'correct_key': sr_mapping})    "
